# Indica

./: .coveragerc  .flake8  .get_git_commit.py  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  90279.json  CONTRIBUTING.md  README.md  Reconstruction.npz  TS_SXR_Interpolation.h5  TS_SXR_Interpolation.keras  bad-seeds.txt  basisfunc.ipynb  bayes_utils.py  bayesian.py  bayesian_bolometry_check.py  bayesian_plot.py  bayesian_run.py  bayesian_setup.py  bayesian_utils.py  default.nix  emissivity.stan  environment.yaml  environment.yml  fail_log.txt  flake.nix  mean_sxr_vector.npy  pyproject.toml  requirements-dev.txt  requirements.txt  runs.sh  script.py  setup.cfg  test_model_compilation.py  testing-requirements.txt  tutorial-workflow.py  workflow.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  publish.yml  quality.yml  tests.yml
ST40_SXR_Inversion/: run_SXR_inversion.py  st40_sxr_inversion.py  st40_sxr_inversion_plots.py  tomo_1D.py
doc/: Makefile  api.rst  composition.rst  conf.py  data.rst  design.rst  developers.rst  index.rst  installation.rst  original.rst  prov_schema.rst  tutorial.rst
doc/api/: asymmetric_quantity.rst  converters.rst  convertors.rst  datatypes.rst  equilibrium.rst  operators.rst  readers.rst  session.rst  writers.rst  xarray.rst
examples/operators/: nbiop_example.py
hda/: XRCS_parametrization_factor.py  __init__.py  analyse_trends.py  atomdat.py  atomdat_table.py  atomic_data_example.py  avantes_trends.py  crystal_class.py  fac_profiles.py  forward_models.py  hda_tree.py  hdaadas.py  hdadata.py  hdaplot.py  hdatests.py  hdatree.py  hdaworkflow.py  hdawrite.py  manage_data.py  mdsHelpers.py  mds_tree_structures.py  physics.py  plasma.py  plot_discharge.py  plot_hda_results.py  plots.py  profiles.py  profiles_gauss.py  read_st40.py  regression_analysis.py  simple_profiles.py  spline_profiles.py  utils.py
hda/Data_Argon/: Corona  WXYZ_R-matrix.txt  compare.plt  compare_Corona.ps  initial  ionreditm
hda/HeLike_Argon_Data/: spectrum.dat.1000.00_1.00e+13_0_0_0_0_0_0  spectrum.dat.1000.00_1.00e+14_0_0_0_0_0_0  spectrum.dat.1000.00_1.00e+15_0_0_0_0_0_0  spectrum.dat.1000.00_2.00e+13_0_0_0_0_0_0  spectrum.dat.1000.00_2.00e+14_0_0_0_0_0_0  spectrum.dat.1000.00_4.00e+13_0_0_0_0_0_0  spectrum.dat.1000.00_4.00e+14_0_0_0_0_0_0  spectrum.dat.1000.00_7.00e+13_0_0_0_0_0_0  spectrum.dat.1000.00_7.00e+14_0_0_0_0_0_0  spectrum.dat.1100.00_1.00e+13_0_0_0_0_0_0  spectrum.dat.1100.00_1.00e+14_0_0_0_0_0_0  spectrum.dat.1100.00_1.00e+15_0_0_0_0_0_0  spectrum.dat.1100.00_2.00e+13_0_0_0_0_0_0  spectrum.dat.1100.00_2.00e+14_0_0_0_0_0_0  spectrum.dat.1100.00_4.00e+13_0_0_0_0_0_0  spectrum.dat.1100.00_4.00e+14_0_0_0_0_0_0  spectrum.dat.1100.00_7.00e+13_0_0_0_0_0_0  spectrum.dat.1100.00_7.00e+14_0_0_0_0_0_0  spectrum.dat.1200.00_1.00e+13_0_0_0_0_0_0  spectrum.dat.1200.00_1.00e+14_0_0_0_0_0_0  spectrum.dat.1200.00_1.00e+15_0_0_0_0_0_0  spectrum.dat.1200.00_2.00e+13_0_0_0_0_0_0  spectrum.dat.1200.00_2.00e+14_0_0_0_0_0_0  spectrum.dat.1200.00_4.00e+13_0_0_0_0_0_0  spectrum.dat.1200.00_4.00e+14_0_0_0_0_0_0  spectrum.dat.1200.00_7.00e+13_0_0_0_0_0_0  spectrum.dat.1200.00_7.00e+14_0_0_0_0_0_0  spectrum.dat.1300.00_1.00e+13_0_0_0_0_0_0  spectrum.dat.1300.00_1.00e+14_0_0_0_0_0_0  spectrum.dat.1300.00_1.00e+15_0_0_0_0_0_0  spectrum.dat.1300.00_2.00e+13_0_0_0_0_0_0  spectrum.dat.1300.00_2.00e+14_0_0_0_0_0_0  spectrum.dat.1300.00_4.00e+13_0_0_0_0_0_0  spectrum.dat.1300.00_4.00e+14_0_0_0_0_0_0  spectrum.dat.1300.00_7.00e+13_0_0_0_0_0_0  spectrum.dat.1300.00_7.00e+14_0_0_0_0_0_0  spectrum.dat.1400.00_1.00e+13_0_0_0_0_0_0  spectrum.dat.1400.00_1.00e+14_0_0_0_0_0_0  spectrum.dat.1400.00_1.00e+15_0_0_0_0_0_0  spectrum.dat.1400.00_2.00e+13_0_0_0_0_0_0  (+104 more)
hda/diagnostics/: CXSpectrometer.py  (+5 more)
indica/: __init__.py  abstract_equilibrium.py  abstractio.py  asymmetric_quantity.py  available_quantities.py  bayesblackbox.py  bayesmodels.py  data.py  datatypes.py  equilibrium.py  fullrunBESTOFGEN  fullrunBESTOFGEN_3los.pkl  fullrunBESTOFGEN_5los.pkl  fullrunBESTOFGEN_7los.pkl  fullrunHOF.pkl  fullrunHOF_3.pkl  fullrunHOF_5.pkl  fullrunHOF_7.pkl  fullrun_bogen_25_8los.pkl  numpy_typing.py  offset.py  physics.py  plasma.py  profilers.py  profiles.py  profiles_gauss.py  provenance.py  session.py  utilities.py
prototypes/: reader.py
snippets/: argon_emissivity.py  atomdat.py  div_spec_mock_up.py  fac_profiles.py  forward_models.py  lyman_alpha_mock_up.py  pi_pfc_div_lens_based_configuration.py  plot_jet.py  read_KT7D.py  test_adas.py  test_adas_fractabu.py  test_bolometry_inversion.py  test_get_efit.py  test_modules.py  test_rho_los.py  test_spline_fit.py  test_sxr_inversion.py  test_ti_measurement.py  wall_coords_jet.txt
src/: data.py  datatypes.py  equilibrium.py  offset.py  session.py  utilities.py
test_sundar/: generate_astra_nodes.py  generate_sxr_camera_nodes.py  test_bed_astra_inclusion.py  test_bed_database.py  test_bed_sxr_inclusion.py
tests/: conftest.py
tests_Sundar/: SXR_inversion_plot.py  TEST_BED  asym_code_TBD  st40_sxr_inversion copy.py  st40_sxr_inversion.py  st40_sxr_inversion_backup.py  st40_sxr_inversion_plots.py  test_parallelization  test_parallelization.py  test_sxr_inversion_comparison  test_sxr_inversion_st40.py  test_sxr_inversion_st40_EFIT_correlation.py  test_sxr_inversion_st40_Rshift.py  test_sxr_inversion_st40_Zshift.py  test_sxr_inversion_st40_angles.py  test_sxr_inversion_st40_shots.py  test_sxr_inversion_st40_shots_Zshift_optimization.py  test_sxr_inversion_st40_shots_plots.py  test_sxr_inversion_st40_shots_sensiivity_analysis.py  test_sxr_inversion_st40_shots_sensitivity_analysis.py  test_sxr_inversion_st40_shots_sensitivity_analysis_combined.py  test_sxr_inversion_st40_shots_sweeps.py  test_sxr_inversion_st40_sweeps.py  test_tomas.py  tomo_1D.py
trends/: OLS.py  analyse_trends.py  ciaran_test.py  cj_json_test.py  cj_translate.py  info_dict.json  info_dict.py  keys_from_json_dict.py  plot_trends.py  read_trends.py  regression.py  test.json  test_trends.py  translate.py  trends_database.py  write_trends.py
(+1532 files in other folders)
