[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | venv
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry]
name = "indica"
version = "0.1.0"
description = "Integrated Diagnostic Composition Analysis"

license = "GPL-3.0-or-later"

authors = [
    "Marco Sertoli <marco.sertoli@outlook.com>",
    "Chris MacMackin <chris.macmackin@ukaea.uk>"
]
maintainers = [
    "Evie Litherland-Smith <evie.litherland-smith@ukaea.uk>",
    "Shane Scully <shane.scully@ukaea.uk>",
    "Chris MacMackin <chris.macmackin@ukaea.uk>",
]
repository = "https://github.com/ukaea/Indica"
documentation = "https://indica-ukaea.readthedocs.io/"

readme = 'README.md'  # Markdown files are supported
include = [".git", "indica/git_version"]

[tool.poetry.dependencies]
corner = "^1.0"
pandas = "1.3.0"
python = ">=3.8,<3.11"
prov = "^1.5.3"
netCDF4 = "^1.5.4"
numpy = "^1.21.0"
scipy = "^1.6.2"
xarray = "0.16.0"
matplotlib = "^3.3.0"
sal = "^1.2.2"
ipython = "^8.8.0"
emcee = "^3.1.4"
flatdict = "^4.0.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
click = "^8.0.0"
corner = "^1.0"
coverage = {extras = ["toml"], version = "^5.2.1"}
hypothesis = {extras = ["numpy"], version = "^5.24.2"}
mypy = "^0.942"
pre-commit = "^2.9.2"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-xdist = "^2.0.0"
types-setuptools = "^57.4.14"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-plantuml = "^0.25"

[tool.poetry.build]
generate-setup-file = false
script = ".get_git_commit.py"

[tool.mypy]
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "prov.*",
    "sal.*",
    "scipy.*",
]
ignore_missing_imports = true
